feat: Unshare library use case
