# packages/functions/api/openapi.yaml
@@ -160,6 +160,20 @@ components:
       required:
         - userName
 
+    UnshareRequest:
+      type: object
+      properties:
+        userNames:
+          type: array
+          items:
+            type: string
+            format: email
+          minItems: 1
+          maxItems: 10
+          description: "List of user emails to remove sharing from"
+      required:
+        - userNames
+
     # Items
     ItemType:
       type: integer
@@ -779,7 +793,7 @@ paths:
 
     post:
       summary: Unshare library
-      description: Remove library sharing with a user
+      description: Remove library sharing from one or more users
       operationId: unshareLibrary
       tags:
         - Sharing
@@ -788,7 +802,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/ShareRequest"
+              $ref: "#/components/schemas/UnshareRequest"
       responses:
         "200":
           description: Library unshared
